# remodex

./: .gitignore  AGENTS.md  CLAUDE.md  IOS_UPSTREAM_DELTA_7C82966.md  IOS_UPSTREAM_DELTA_C3A1C14.md  README.md  WINDOWS_COMPATIBILITY_CHANGES.md  desktop-tauri-roadmap.md  piano.md  prd.md  run-local-remodex.ps1  skill-analysis-report.md  subagents.md
Docs/: android-roadmap.md  cocoindex-code.md
android/: .gitignore  commit-to-plan-map.md  ios-android-parity-plan.md  ios-parent-148-commit-parity-audit.md  ios-parent-148-verification-checklist.md  settings.gradle.kts  tmp_patch_strings.py
remodex-host/src-tauri/: Cargo.toml  tauri.conf.json
remodex-host/src-tauri/bundled/phodex-bridge/src/: account-status.js  bootstrap-codex-cli.js  codex-home.js  codex-transport.js  desktop-handler.js  git-handler.js  project-handler.js  rollout-live-mirror.js  workspace-handler.js
remodex-host/src-tauri/bundled/phodex-bridge/test/: bridge.test.js  desktop-handler.test.js  git-handler.test.js  macos-launch-agent.test.js  project-handler.test.js  remodex-cli.test.js  rollout-live-mirror.test.js  secure-device-state.test.js
remodex-host/src-tauri/capabilities/: default.json
remodex-host/src-tauri/src/: lib.rs
remodex-host/src-tauri/src/provider_bridge/: config.rs  errors.rs  mod.rs  server.rs  state.rs
remodex-host/src-tauri/src/provider_bridge/adapters/: deepseek.rs
remodex-host/src-tauri/src/provider_bridge/routes/: health.rs  mod.rs  models.rs  responses.rs
remodex-host/src-tauri/src/provider_bridge/translators/: chat_to_responses.rs  mod.rs  responses_to_chat.rs
(+693 files in other folders)
