[package]
name = "remodex-host"
version = "0.3.0"
description = "Remodex Host - Local bridge manager desktop app"
authors = ["Remodex"]
license = "ISC"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2.10.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
thiserror = "2"
tower-http = { version = "0.6", features = ["trace"] }
